attempted configuration for keycloak

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.session:spring-session-core'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
-	implementation 'org.apache.commons:commons-dbcp2:2.+'
+	implementation 'org.apache.commons:commons-dbcp2:2.9.0'
+	implementation 'junit:junit:4.13.2'
+	implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+	implementation 'org.springframework.security:spring-security-oauth2-jose'
 	runtimeOnly 'org.postgresql:postgresql'
 }
 
