--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true 
 
 spring.profiles.active=${SPRING_PROFILE:development}
-server.port=${PORT:5050}
+#server.port=${PORT:5050}
 
 # create
 # create-drop
@@ -27,3 +27,17 @@ server.port=${PORT:5050}
 spring.datasource.url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres?sslmode=prefer&user=postgres&password=Prometeus21}
 spring.datasource.username: postgres
 spring.datasource.password: Prometeus21
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+
+
+springdoc.swagger-ui.oauth.client-id=${CLIENT_ID:client-id}
+springdoc.swagger-ui.oauth.client-secret=${CLIENT_SECRET:client-secret}
+springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${ISSUER_URL:http://localhost:8083/auth/realms/assignment-three}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${JWKS_URI:http://localhost:8083/auth/realms/assignment-three/protocol/openid-connect/certs}
